--- a/APISD/templates/index.html
+++ b/APISD/templates/index.html
@@ -30,10 +30,11 @@
 
 		
 		    <form action="/RecogerValores" method="POST">
-		   	<input type="radio" name="decision" value="1">tumbr a dropbox
-			<input type="radio" name="decision" value="2">tumblr a drive
-			<input type="radio" name="decision" value="3">tumblr
-			<input type="submit" name="my-form" class="button buttonBlue" value="mandar">
+		   	    tumbr a dropbox<input type="radio" name="decision" value="1">
+			    tumblr a drive<input type="radio" name="decision" value="2">
+		    	tumblr<input type="radio" name="decision" value="3">
+                dropbox a drive<input type="radio" name="decision" value="4">
+		    	<input type="submit" name="my-form" class="button buttonBlue" value="mandar">
 		    </form>
 
 
